--- a/CNQAOS/web/resources/templates/center/center_template.html
+++ b/CNQAOS/web/resources/templates/center/center_template.html
@@ -10,6 +10,7 @@
             <th>Description</th>  
             <th>Latitude</th> 
             <th>Longitude</th>  
+            <th>          </th>  
         </tr>
         <tr data-ng-repeat="center in centerList">
 <!--            <td>{{ }}</td>-->
@@ -52,16 +53,14 @@
             <div class="row">
                 <div class="form-group col-xs-5 col-lg-4">
                 <label for="pin">City</label>
-                <input type="text" data-ng-model="center.city" ng-minlength="1" ng-maxlength="8" ng-required="true" class="form-control" id="city" placeholder="Enter Center ZIP CODE">
-            
+                <input type="text" data-ng-model="center.city" ng-minlength="1" ng-maxlength="50" ng-required="true" class="form-control" id="city" placeholder="Enter City Name">            
                 </div>
             </div>
             
             <div class="row">
                 <div class="form-group col-xs-5 col-lg-4">
                 <label for="pin">Zip code</label>
-                <input type="text" data-ng-model="center.pin" ng-minlength="1" ng-maxlength="8" ng-required="true" class="form-control" id="pin" placeholder="Enter Center ZIP CODE">
-            
+                <input type="text" data-ng-model="center.pin" ng-minlength="1" ng-maxlength="8" ng-required="true" class="form-control" id="pin" placeholder="Enter Center ZIP CODE">            
                 </div>
             </div>
             
@@ -89,7 +88,7 @@
                 </div>
             </div>
             
-            <button data-ng-click="create(center)" class="btn btn-default">Submit</button>
+             <button data-ng-click="create()" class="btn btn-default">Submit</button>
             <button data-ng-click="cancel()" class="btn btn-default">Cancel</button>
         </form>
     </div>
