--- a/CNQAOS/web/resources/templates/teacher/teacher_template.html
+++ b/CNQAOS/web/resources/templates/teacher/teacher_template.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="form-group col-xs-5 col-lg-4">
                     <label for="teacherID">ID</label>
-                    <input type="text" name="teacherID" data-ng-model="teacher.id" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="teacherID" placeholder="Enter teacher Name">
+                    <input type="text" name="teacherID" data-ng-model="teacher.id" ng-minlength="1" ng-maxlength="50"  ng-required="true" class="form-control" id="teacherID" placeholder="Enter teacher ID">
                 </div>
             </div>
             
